<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTFoodLine</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
	<string name="name">Name</string>
	<string name="email">Email</string>
	<string name="phone">Phone Number</string>
	<string name="photo">Photo</string>
	<string name="upload">Upload</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="terms">I agree to the terms and conditions</string>
	<string name="signup">Sign Up</string>
	<string name="login">Log In</string>
	<string name="facebookSignup">Sign In Using Facebook</string>
	<string name="vendorSignup">Vendor Sign In</string>
	<string name="restaurantName">Restaurant Name</string>
	<string name="cancel">Cancel</string>
	<string name="photoSize">Photo size cannot exceed 3 MB</string>
	<string name="diningOptionsGatech">Dining at Georgia Tech</string>
	<string name="checkout">Proceed to Checkout</string>
	<string name="menu">Menu</string>
	<string name="pickup">Enter your Pick Up Information</string>
	<string name="payment">Proceed to Payment</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="checkAvailability">Check Availability</string>
	<string name="paymentInformation">Enter your Payment Information</string>
	<string name="pay">Pay</string>
	<string name="confirmation">Confirmation</string>
	<string name="order">Order Information</string>
	<string name="total">Total Amoount</string>
	<string name="paymentMethod">Payment Method</string>
	<string name="transactionTime">Transaction Time</string>
	<string name="qrcode">QR Code</string>
	<string name="orders">Orders</string>
	<string name="sortByTime">Sort By Time</string>
	<string name="sortByName">Sort By Name</string>
		
	
	
	
</resources>
